# model_railway

./: CMakeLists.txt  README.md  main.cpp  railway.cpp  railway.h  исключения.txt  переделать.txt  правила для input.txt  советы.txt
classes/: exception.h  map.cpp  map.h  railway.cpp  railway.h  resource.cpp  resource.h  station.cpp  station.h  train.cpp  train.h  van.cpp  van.h
